--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_movies"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="Movies" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_series"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="Series" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_drama"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="Drama" />
+ <item
+        android:id="@+id/navigation_scifi"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Scifi" />
+ <item
+        android:id="@+id/navigation_comedy"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Comedy" />
 
 </menu>
