--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_movies">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.moviesapp.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_movies"
+        android:name="com.example.moviesapp.ui.movies.MoviesFragment"
+        android:label="Movies"
+        tools:layout="@layout/fragment_movies" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.moviesapp.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_series"
+        android:name="com.example.moviesapp.ui.series.SeriesFragment"
+        android:label="Series"
+        tools:layout="@layout/fragment_series" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.moviesapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_drama"
+        android:name="com.example.moviesapp.ui.drama.DramaFragment"
+        android:label="Drama"
+        tools:layout="@layout/fragment_drama" />
+    <fragment
+        android:id="@+id/navigation_scifi"
+        android:name="com.example.moviesapp.ui.scifi.SciFiFragment"
+        android:label="SciFi"
+        tools:layout="@layout/fragment_scifi" />
+    <fragment
+        android:id="@+id/navigation_comedy"
+        android:name="com.example.moviesapp.ui.comedy.ComedyFragment"
+        android:label="Comedy"
+        tools:layout="@layout/fragment_comedy" />
 </navigation>
