--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -7,23 +7,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="4dp"
     android:layout_marginBottom="4dp"
-    app:cardBackgroundColor="@color/colorPrimaryDark">
+    app:cardElevation="0dp"
+    app:cardBackgroundColor="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
-        android:layout_width="wrap_content"
+        android:layout_width="124dp"
         android:layout_height="wrap_content">
 
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="112dp"
-            android:layout_height="164dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:id="@+id/movieImage"
+            android:layout_width="match_parent"
+            android:layout_height="182dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,17 +30,22 @@
             app:srcCompat="@drawable/aquaman" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/movieTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:text="Aquaman"
-            android:textColor="@android:color/black"
+            android:textColor="@color/primaryText"
+            android:textSize="@dimen/textSizeBig"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="@+id/movieImage"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintStart_toStartOf="@+id/movieImage"
+            app:layout_constraintTop_toBottomOf="@+id/movieImage" />
 
         <RatingBar
             android:id="@+id/ratingBar"
@@ -52,22 +53,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:alpha="0.9"
             android:numStars="5"
             android:rating="3.5"
             android:stepSize="1"
-            app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="@+id/movieTitle"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintStart_toStartOf="@+id/movieTitle"
+            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/releaseYear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="2018"
-            android:textColor="@android:color/tertiary_text_light"
+            android:textColor="@color/secondaryText"
+            android:textSize="@dimen/textSizeMedium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ratingBar"
             app:layout_constraintHorizontal_bias="0.0"
