--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#B3E5FC</color>
+    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorAccent">#FF9800</color>
+    <color name="primaryColor">#03A9F4</color>
+    <color name="white">#FFFFFF</color>
+    <color name="dividerColor">#BDBDBD</color>
+    <color name="primaryText">#212121</color>
+    <color name="secondaryText">#757575</color>
+
 </resources>
