--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="textSizeBig">16dp</dimen>
+    <dimen name="textSizeMedium">14dp</dimen>
+    <dimen name="textSizeSmall">12dp</dimen>
 </resources>
