add a MovieDetails activity

--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/secondaryText"
+        android:background="@color/colorPrimaryDark"
         android:layout_margin="0dp">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -19,6 +19,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:scrollbars="vertical"
+            android:clipToPadding="false"
+            android:padding="0dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
