--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -8,7 +8,9 @@
     app:cardCornerRadius="4dp"
     android:layout_marginBottom="4dp"
     app:cardElevation="0dp"
-    app:cardBackgroundColor="@color/white">
+    android:layout_marginEnd="4dp"
+    app:cardBackgroundColor="@color/white"
+    android:layout_marginRight="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
@@ -19,7 +21,7 @@
         <ImageView
             android:id="@+id/movieImage"
             android:layout_width="match_parent"
-            android:layout_height="182dp"
+            android:layout_height="186dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
