--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="4dp"
     android:layout_marginBottom="4dp"
     app:cardElevation="0dp"
@@ -42,7 +41,7 @@
             android:layout_marginRight="8dp"
             android:text="Aquaman"
             android:textColor="@color/primaryText"
-            android:textSize="@dimen/textSizeBig"
+            android:textSize="@dimen/heading"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/movieImage"
             app:layout_constraintHorizontal_bias="0.0"
@@ -54,14 +53,16 @@
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:alpha="0.9"
             android:numStars="5"
-            android:rating="3.5"
-            android:stepSize="1"
-            app:layout_constraintEnd_toEndOf="@+id/movieTitle"
+            android:rating="4.5"
+            android:stepSize="0.1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/movieTitle"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/movieTitle" />
 
         <TextView
@@ -72,7 +73,7 @@
             android:layout_marginBottom="8dp"
             android:text="2018"
             android:textColor="@color/secondaryText"
-            android:textSize="@dimen/textSizeMedium"
+            android:textSize="@dimen/textSizeSubTitle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ratingBar"
             app:layout_constraintHorizontal_bias="0.0"
