--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#B3E5FC</color>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#FF9800</color>
-    <color name="primaryColor">#03A9F4</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC6</color>
     <color name="white">#FFFFFF</color>
     <color name="dividerColor">#BDBDBD</color>
     <color name="primaryText">#212121</color>
