--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="textSizeBig">16dp</dimen>
-    <dimen name="textSizeMedium">14dp</dimen>
-    <dimen name="textSizeSmall">12dp</dimen>
+    <dimen name="textSizeBody">16sp</dimen>
+    <dimen name="textSizeSubTitle">14sp</dimen>
+    <dimen name="textSizeSmall">12sp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="heading">24sp</dimen>
 </resources>
