--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -9,12 +9,14 @@
     app:cardElevation="0dp"
     android:layout_marginEnd="4dp"
     app:cardBackgroundColor="@color/white"
-    android:layout_marginRight="4dp">
+    android:layout_marginRight="4dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="124dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
 
         <ImageView
@@ -22,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="186dp"
             android:layout_marginBottom="16dp"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -41,7 +44,7 @@
             android:layout_marginRight="8dp"
             android:text="Aquaman"
             android:textColor="@color/primaryText"
-            android:textSize="@dimen/heading"
+            android:textSize="@dimen/textSizeSubTitle"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/movieImage"
             app:layout_constraintHorizontal_bias="0.0"
@@ -58,9 +61,9 @@
             android:layout_marginTop="8dp"
             android:alpha="0.9"
             android:numStars="5"
-            android:rating="4.5"
+            android:rating="4.2"
             android:stepSize="0.1"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/movieTitle"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/movieTitle" />
@@ -73,7 +76,7 @@
             android:layout_marginBottom="8dp"
             android:text="2018"
             android:textColor="@color/secondaryText"
-            android:textSize="@dimen/textSizeSubTitle"
+            android:textSize="@dimen/textSizeSmall"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ratingBar"
             app:layout_constraintHorizontal_bias="0.0"
