add scrim gradient drawable file

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -40,6 +40,9 @@
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
                     android:src="@drawable/aquaman" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
