--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -42,7 +42,8 @@
                     android:src="@drawable/aquaman" />
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/scrim_gradient"/>
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
