--- a/app/src/main/res/layout/content_movie_detailsg.xml
+++ b/app/src/main/res/layout/content_movie_detailsg.xml
@@ -22,6 +22,7 @@
             android:textColor="@color/primaryText"
             android:textSize="@dimen/heading"
             android:textStyle="bold"
+            app:fontFamily="@font/opensans_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,6 +35,7 @@
             android:text="2hr 20min"
             android:textColor="@color/secondaryText"
             android:textSize="@dimen/textSizeSubTitle"
+            app:fontFamily="@font/raleway_regular"
             app:layout_constraintEnd_toStartOf="@+id/genre"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -63,6 +65,7 @@
             android:text="Adventure,Fantacy"
             android:textColor="@color/secondaryText"
             android:textSize="@dimen/textSizeSubTitle"
+            app:fontFamily="@font/raleway_regular"
             app:layout_constraintBottom_toBottomOf="@+id/movieDuration"
             app:layout_constraintEnd_toStartOf="@+id/yearOfRelease"
             app:layout_constraintStart_toEndOf="@+id/movieDuration"
@@ -87,6 +90,7 @@
             android:text="2018"
             android:textColor="@color/secondaryText"
             android:textSize="@dimen/textSizeSubTitle"
+            app:fontFamily="@font/raleway_regular"
             app:layout_constraintBottom_toBottomOf="@+id/genre"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/genre"
@@ -113,15 +117,18 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:text="3.6"
+            app:fontFamily="@font/raleway_regular"
             app:layout_constraintBottom_toBottomOf="@+id/ratingBar2"
             app:layout_constraintStart_toEndOf="@+id/ratingBar2"
-            app:layout_constraintTop_toTopOf="@+id/ratingBar2" />
+            app:layout_constraintTop_toTopOf="@+id/ratingBar2"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/overviewText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/raleway_regular"
             android:paddingEnd="16dp"
             android:paddingRight="16dp"
             android:text="@string/overview"
