--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -41,6 +41,7 @@
             android:textColor="@color/primaryText"
             android:textSize="@dimen/textSizeSubTitle"
             android:textStyle="bold"
+            app:fontFamily="@font/opensans_bold"
             app:layout_constraintEnd_toEndOf="@+id/movieImage"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/movieImage"
@@ -51,8 +52,6 @@
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:alpha="0.9"
             android:numStars="5"
@@ -60,7 +59,7 @@
             android:stepSize="0.1"
             app:layout_constraintEnd_toEndOf="@+id/movieTitle"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/movieTitle"
             app:layout_constraintTop_toBottomOf="@+id/movieTitle" />
 
         <TextView
@@ -72,6 +71,7 @@
             android:text="2018"
             android:textColor="@color/secondaryText"
             android:textSize="@dimen/textSizeSmall"
+            app:fontFamily="@font/raleway_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ratingBar"
             app:layout_constraintHorizontal_bias="0.0"
