--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -5,11 +5,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
+    android:layout_margin="2dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:padding="2dp"
         android:layout_width="124dp"
         android:layout_height="wrap_content">
 
@@ -18,7 +18,6 @@
             android:id="@+id/movieImage"
             android:layout_width="match_parent"
             android:layout_height="186dp"
-            android:layout_marginBottom="16dp"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
